k8s/south/profile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: profile-service
  name: profile-service
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: profile-service
      app.kubernetes.io/managed-by: cloud-console
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: profile-service
        app.kubernetes.io/managed-by: cloud-console
    spec:
      containers:
      - env:
        - name: ORDER_SERVICE_URL
          valueFrom:
            configMapKeyRef:
              key: ORDER_SERVICE_URL
              name: profile-service-config-mnmn
        image: us-central1-docker.pkg.dev/gke-sre-demo/app-repo/profile-service@sha256:12c15e8f0a5bac6a46900442e9fc30cc034566a538b620ca146a6b66f7de1af8
        imagePullPolicy: IfNotPresent
        name: profile-service-sha256-1
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 100m
            ephemeral-storage: 1Gi
            memory: 256Mi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
