k8s/south/profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
  namespace: default
  labels:
    app: profile-service
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/backend-config: '{"default": "profile-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: profile-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
